# PAT_neucleo_firmware_for_86euv89y8

./: .gitignore  AGENTS.md  CMakeLists.txt  PINMAP.md  README.md  STM32-for-VSCode.config.yaml  compile_commands.json  platformio.ini
.cursor/rules/: ads127l11-adc.mdc  stm32-firmware.mdc
.cursor/skills/: Folder_Structure.md  README.md
.cursor/skills/four-channel-spi-ads127-quartet/: SKILL.md
.cursor/skills/platformio-stm32-pat/: SKILL.md
.cursor/skills/single-channel-spi4-ads127/: SKILL.md
.cursor/skills/spi2-pc2c-miso-h7-pat/: SKILL.md
.cursor/skills/stm32cube-cmake-pat/: SKILL.md
.cursor/skills/stm32cube-hal-model/: SKILL.md  reference-um2217.md
.cursor/skills/stm32cube-hal-model/references/: reference-um2217.md
.cursor/skills/stm32h7-hal-pitfalls/: SKILL.md
cmake/: gcc-arm-none-eabi.cmake
cube/: legacy_86euv89y8_h753zi.ioc
cube/linker/: STM32H753ZITx_FLASH.ld
docs/: MEMS_SPI5.md  UART5_POLARFIRE_PAYLOAD.md  UART7_LASER_DRIVER.md  USER_MANUAL.md
examples/: README.md
examples/four-channel-spi1-4-ads127/: QUARTET_LA_TIMING.md  README.md
examples/single-bus-spi1-4-ads127/: README.md
examples/single-channel-spi4-ads127/: README.md
examples/spi1-4-net-scan/: README.md
extras/: minimal_led_main.c
include/: ad5664r.h  ads127l11_hal_stm32.h  app_state.h  pat_clock.h  pat_crc32.h  pat_mems_regs.h  pat_mems_sm.h  pat_pinmap.h  pat_quartet_app.h  pat_quartet_epoch.h  pat_quartet_p4_dma.h  pat_quartet_rolling.h  pat_quartet_spi_irq.h  pat_spi_ads127.h  pat_spi_h7_master.h  pat_uart5_pat5.h  pat_uart7_laser.h  qpd_dsp.h  qpd_spi6_slave.h  spi6_test_frame.h
lib/ADS127TI/include/: ads127l11.h
lib/ADS127TI/src/: ads127l11.c
scripts/: Build-Stm32CubeCMake.ps1  Ensure-STM32CubeFrameworkLink.ps1  Flash-Stm32CubeOpenOCD.ps1  Test-HeartbeatUart.ps1  test_heartbeat_uart.py
src/: ad5664r.c  ads127l11.c  ads127l11.h  ads127l11_hal_stm32.c  app_state.c  main.c  main_mems_bringup.c  main_quartet.c  main_single_ads127_spi.c  main_spi1_4_scan.c  main_spi6.c  main_spi_test.c  pat_clock.c  pat_crc32.c  pat_mems_regs.c  pat_mems_sm.c  pat_quartet_app.c  pat_quartet_epoch.c  pat_quartet_rolling.c  pat_quartet_spi_irq.c  pat_spi_ads127.c  pat_spi_h7_master.c  pat_uart5_pat5.c  pat_uart7_laser.c  qpd_dsp.c  qpd_spi6_slave.c  spi6_test_frame.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
test/: README  unity_config.c  unity_config.h
test/test_smoke/: test_smoke.c
